--- a/web.xml
+++ b/web.xml
@@ -11,4 +11,34 @@
         <tracking-mode>COOKIE</tracking-mode>
     </session-config>
 
+    <mime-mapping> <extension>js</extension> <mime-type>application/javascript</mime-type> </mime-mapping>
+    <mime-mapping> <extension>css</extension> <mime-type>text/css</mime-type> </mime-mapping>
+    <mime-mapping> <extension>jpeg</extension> <mime-type>image/jpeg</mime-type> </mime-mapping>
+    <mime-mapping> <extension>jpg</extension> <mime-type>image/jpeg</mime-type> </mime-mapping>
+    <mime-mapping> <extension>png</extension> <mime-type>image/png</mime-type> </mime-mapping>
+    <mime-mapping> <extension>gif</extension> <mime-type>image/gif</mime-type> </mime-mapping>
+
+    <filter>
+       <filter-name>ExpiresFilter</filter-name>
+       <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+       <init-param>
+          <param-name>ExpiresByType image</param-name>
+          <param-value>access plus 7 days</param-value>
+       </init-param>
+       <init-param>
+          <param-name>ExpiresByType text/css</param-name>
+          <param-value>access plus 7 days</param-value>
+       </init-param>
+       <init-param>
+          <param-name>ExpiresByType application/javascript</param-name>
+          <param-value>access plus 7 days</param-value>
+       </init-param>
+    </filter>
+ 
+    <filter-mapping>
+       <filter-name>ExpiresFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+       <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
 </web-app>
