--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,5 @@
-handlers = 1catalina.org.apache.juli.FileHandler,ErrorHandler
-.handlers = 1catalina.org.apache.juli.FileHandler,ErrorHandler
+handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler
+.handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler
 1catalina.org.apache.juli.FileHandler.level = FINE
 1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 1catalina.org.apache.juli.FileHandler.prefix = application
@@ -11,13 +11,14 @@ java.util.logging.SimpleFormatter.format = %1$tF %1$tT %4$s %2$s: %5$s%6$s%n
 org.apache.catalina.core.ContainerBase.[Catalina].[localhost].level = INFO
 org.apache.catalina.core.ContainerBase.[Catalina].[localhost].handlers = 1catalina.org.apache.juli.FileHandler
 
-ErrorHandler.level = SEVERE
-ErrorHandler.directory = ${catalina.base}/logs
-ErrorHandler.prefix = error
-ErrorHandler.formatter = java.util.logging.SimpleFormatter
-ErrorHandler.rotatable=false
-ErrorHandler.append = true
-ErrorHandler.count = 1000
+# error.log
+2catalina.org.apache.juli.FileHandler.level = SEVERE
+2catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+2catalina.org.apache.juli.FileHandler.prefix = error
+2catalina.org.apache.juli.FileHandler.formatter = java.util.logging.SimpleFormatter
+2catalina.org.apache.juli.FileHandler.rotatable=false
+2catalina.org.apache.juli.FileHandler.append = true
+2catalina.org.apache.juli.FileHandler.count = 1000
 
 org.springframework.level=WARNING
 net.sf.ehcache.level=WARNING
