--- a/logging.properties
+++ b/logging.properties
@@ -2,9 +2,9 @@ handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileH
 .handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler
 1catalina.org.apache.juli.FileHandler.level = FINE
 1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
-1catalina.org.apache.juli.FileHandler.prefix = application
+1catalina.org.apache.juli.FileHandler.prefix = application.
 1catalina.org.apache.juli.FileHandler.formatter = java.util.logging.SimpleFormatter
-1catalina.org.apache.juli.FileHandler.rotatable=false
+1catalina.org.apache.juli.FileHandler.rotatable=true
 java.util.logging.SimpleFormatter.format = %1$tF %1$tT %4$s %2$s: %5$s%6$s%n
 1catalina.org.apache.juli.FileHandler.count = 1000
 1catalina.org.apache.juli.FileHandler.append = true
@@ -12,9 +12,9 @@ java.util.logging.SimpleFormatter.format = %1$tF %1$tT %4$s %2$s: %5$s%6$s%n
 # error.log
 2catalina.org.apache.juli.FileHandler.level = SEVERE
 2catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
-2catalina.org.apache.juli.FileHandler.prefix = error
+2catalina.org.apache.juli.FileHandler.prefix = error.
 2catalina.org.apache.juli.FileHandler.formatter = java.util.logging.SimpleFormatter
-2catalina.org.apache.juli.FileHandler.rotatable=false
+2catalina.org.apache.juli.FileHandler.rotatable=true
 2catalina.org.apache.juli.FileHandler.append = true
 2catalina.org.apache.juli.FileHandler.count = 1000
 
