disable the file-based loggers

--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,7 @@
-handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
-.handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
+#handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
+#.handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
+handlers = org.apache.plugins.JdbcHandler
+.handlers= org.apache.plugins.JdbcHandler
 
 1catalina.org.apache.juli.FileHandler.level = FINE
 1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
