set org.apache.catalina.level=WARNING (from SEVERE)

--- a/logging.properties
+++ b/logging.properties
@@ -23,7 +23,7 @@ java.util.logging.SimpleFormatter.format = %1$tF %1$tT %4$s %2$s: %5$s%6$s%n
 
 org.springframework.level=WARNING
 net.sf.ehcache.level=WARNING
-org.apache.catalina.level=SEVERE
+org.apache.catalina.level=WARNING
 org.apache.catalina.startup.Catalina.level=INFO
 org.thymeleaf.level=WARNING
 
