--- a/logging.properties
+++ b/logging.properties
@@ -26,4 +26,5 @@ net.sf.ehcache.level=WARNING
 org.apache.catalina.level=SEVERE
 org.apache.catalina.startup.Catalina.level=INFO
 org.thymeleaf.level=WARNING
+org.springframework.web.servlet.PageNotFound.level=SEVERE
 
