--- a/jdbc/.project
+++ b/jdbc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jdbc</name>
+	<name>tomcat7-jdbc</name>
 	<comment></comment>
 	<projects>
 	</projects>
