cloudwatch deployment ok in devweb

--- a/logging.properties
+++ b/logging.properties
@@ -1,7 +1,9 @@
 #handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
 #.handlers = 1catalina.org.apache.juli.FileHandler,2catalina.org.apache.juli.FileHandler,org.apache.plugins.JdbcHandler
-handlers = org.apache.plugins.JdbcHandler
-.handlers= org.apache.plugins.JdbcHandler
+#handlers = org.apache.plugins.JdbcHandler
+#.handlers= org.apache.plugins.JdbcHandler
+handlers = org.apache.plugins.CloudwatchHandler
+.handlers = org.apache.plugins.CloudwatchHandler
 
 1catalina.org.apache.juli.FileHandler.level = FINE
 1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
