--- a/logging.properties
+++ b/logging.properties
@@ -28,6 +28,6 @@ net.sf.ehcache.level=WARNING
 org.apache.catalina.level=WARNING
 org.apache.catalina.startup.Catalina.level=INFO
 org.thymeleaf.level=WARNING
-org.apache.catalina.loader.WebappClassLoaderBase.level=SEVERE
 org.springframework.web.servlet.PageNotFound.level=SEVERE
+org.apache.catalina.loader.WebappClassLoaderBase.level=OFF
 
