bring back AccessLogJdkValve -- log to two destinations

--- a/logging.properties
+++ b/logging.properties
@@ -5,14 +5,7 @@
 handlers = org.apache.plugins.CloudwatchHandler
 .handlers = org.apache.plugins.CloudwatchHandler
 
-1catalina.org.apache.juli.FileHandler.level = FINE
-1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
-1catalina.org.apache.juli.FileHandler.prefix = application.
-1catalina.org.apache.juli.FileHandler.formatter = java.util.logging.SimpleFormatter
-1catalina.org.apache.juli.FileHandler.rotatable=true
-java.util.logging.SimpleFormatter.format = %1$tF %1$tT %4$s %2$s: %5$s%6$s%n
-1catalina.org.apache.juli.FileHandler.count = 1000
-1catalina.org.apache.juli.FileHandler.append = true
+java.util.logging.SimpleFormatter.format = %4$s %2$s: %5$s%6$s%n
 
 # error.log
 2catalina.org.apache.juli.FileHandler.level = SEVERE
@@ -28,6 +21,6 @@ net.sf.ehcache.level=WARNING
 org.apache.catalina.level=WARNING
 org.apache.catalina.startup.Catalina.level=INFO
 org.thymeleaf.level=WARNING
-org.apache.catalina.loader.WebappClassLoaderBase.level=SEVERE
 org.springframework.web.servlet.PageNotFound.level=SEVERE
+org.apache.catalina.loader.WebappClassLoaderBase.level=OFF
 
