updates for tomcat8

--- a/logging.properties
+++ b/logging.properties
@@ -23,4 +23,5 @@ org.apache.catalina.startup.Catalina.level=INFO
 org.thymeleaf.level=WARNING
 org.springframework.web.servlet.PageNotFound.level=SEVERE
 org.apache.catalina.loader.WebappClassLoaderBase.level=OFF
-
+org.apache.jasper.servlet.TldScanner.level = WARNING
+org.apache.catalina.startup.ClassLoaderFactory.level = SEVERE
