--- a/cloudwatch-handler/pom.xml
+++ b/cloudwatch-handler/pom.xml
@@ -67,8 +67,8 @@
 	</build>
 
 	<parent>
-		<groupId>tomcat7-conf</groupId>
-		<artifactId>tomcat7-conf</artifactId>
-		<version>2.0.0</version>
+		<groupId>tomcat-conf</groupId>
+		<artifactId>tomcat-conf</artifactId>
+		<version>8.0.0</version>
 	</parent>
 </project>
