--- a/jdbc-handler/pom.xml
+++ b/jdbc-handler/pom.xml
@@ -4,9 +4,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>tomcat7-conf</groupId>
-		<artifactId>tomcat7-conf</artifactId>
-		<version>2.0.0</version>
+		<groupId>tomcat-conf</groupId>
+		<artifactId>tomcat-conf</artifactId>
+		<version>8.0.0</version>
 	</parent>
 	<artifactId>jdbc-handler</artifactId>
 	<name>jdbc-handler</name>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
-			<version>7.0.12</version>
+			<version>8.0.52</version>
 		</dependency>
 	</dependencies>
 	<build>
