--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>tomcat7-conf</groupId>
-	<artifactId>tomcat7-conf</artifactId>
-	<version>2.0.0</version>
+	<groupId>tomcat-conf</groupId>
+	<artifactId>tomcat-conf</artifactId>
+	<version>8.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
