--- a/cloudwatch-handler/.project
+++ b/cloudwatch-handler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tomcat7-cloudwatch</name>
+	<name>tomcat-cloudwatch</name>
 	<comment></comment>
 	<projects>
 	</projects>
