--- a/cloudwatch-handler/pom.xml
+++ b/cloudwatch-handler/pom.xml
@@ -15,6 +15,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.10.19</version>
@@ -39,6 +44,7 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
 			<version>8.0.52</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat.maven</groupId>
@@ -82,6 +88,9 @@
 						<goals>
 							<goal>shade</goal>
 						</goals>
+						<configuration>
+							<outputDirectory>${project.basedir}/deploy</outputDirectory>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
