--- a/jdbc-handler/.project
+++ b/jdbc-handler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tomcat7-jdbc-handler</name>
+	<name>tomcat-jdbc-handler</name>
 	<comment></comment>
 	<projects>
 	</projects>
